kubernetes/mqtt/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto-mqtt
  namespace: producao
spec:
  externalIPs:
    - "191.36.8.1"
    - "191.36.8.4"
    - "191.36.8.6"
    - "191.36.8.7"
    - "191.36.8.25"
  ports:
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
  selector:
    app: mosquitto
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
    protocol: mqtt
  name: mosquitto-ws
  namespace: producao
spec:
  ports:
    - name: mqtt-ws
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: mosquitto
